# simple-memory-game

./: Cargo.toml  README.md  my-release-key.keystore
.github/workflows/: rust.yaml
src/: lib.rs  main.rs
ui/: app-window.slint
ui/components/: memory-tile-container.slint  memory-tile.slint
